blog_a-unikernel-firewall-for-qubesos/iptables-save
This is slightly different (my main VMs are now using
mirage-firewall), but here's a dump of sys-firewall with a single
client VM:

# Generated by iptables-save v1.4.21 on Mon Jan  4 14:55:01 2016
*raw
:PREROUTING ACCEPT [4:516]
:OUTPUT ACCEPT [4:280]
-A PREROUTING ! -s 10.137.2.15/32 -i vif112.0 -j DROP
COMMIT
# Completed on Mon Jan  4 14:55:01 2016
# Generated by iptables-save v1.4.21 on Mon Jan  4 14:55:01 2016
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [4:280]
:POSTROUTING ACCEPT [0:0]
:PR-QBS - [0:0]
:PR-QBS-SERVICES - [0:0]
-A PREROUTING -j PR-QBS
-A PREROUTING -j PR-QBS-SERVICES
-A POSTROUTING -o vif+ -j ACCEPT
-A POSTROUTING -o lo -j ACCEPT
-A POSTROUTING -j MASQUERADE
-A PR-QBS -d 10.137.2.1/32 -p udp -m udp --dport 53 -j DNAT --to-destination 10.137.1.1
-A PR-QBS -d 10.137.2.1/32 -p tcp -m tcp --dport 53 -j DNAT --to-destination 10.137.1.1
-A PR-QBS -d 10.137.2.254/32 -p udp -m udp --dport 53 -j DNAT --to-destination 10.137.1.254
-A PR-QBS -d 10.137.2.254/32 -p tcp -m tcp --dport 53 -j DNAT --to-destination 10.137.1.254
COMMIT
# Completed on Mon Jan  4 14:55:01 2016
# Generated by iptables-save v1.4.21 on Mon Jan  4 14:55:01 2016
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [4:280]
-A INPUT -i vif+ -p udp -m udp --dport 68 -j DROP
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i vif0.0 -j ACCEPT
-A FORWARD -i vif+ -o vif+ -j DROP
-A FORWARD -s 10.137.2.15/32 -d 10.137.1.1/32 -p udp -m udp --dport 53 -j ACCEPT
-A FORWARD -s 10.137.2.15/32 -d 10.137.1.254/32 -p udp -m udp --dport 53 -j ACCEPT
-A FORWARD -s 10.137.2.15/32 -d 10.137.1.1/32 -p tcp -m tcp --dport 53 -j ACCEPT
-A FORWARD -s 10.137.2.15/32 -d 10.137.1.254/32 -p tcp -m tcp --dport 53 -j ACCEPT
-A FORWARD -s 10.137.2.15/32 -p icmp -j ACCEPT
-A FORWARD -s 10.137.2.15/32 -d 10.137.255.254/32 -p tcp -m tcp --dport 8082 -j DROP
-A FORWARD -s 10.137.2.15/32 -j ACCEPT
COMMIT
# Completed on Mon Jan  4 14:55:01 2016

1: lo: <LOOPBACK,UP,LOWER_UP> mtu 65536 qdisc noqueue state UNKNOWN
group default
    inet 127.0.0.1/8 scope host lo
       valid_lft forever preferred_lft forever
2: eth0: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1500 qdisc mq state UP
group default qlen 1000
    inet 10.137.1.6/32 brd 10.255.255.255 scope global eth0
       valid_lft forever preferred_lft forever
4: vif112.0: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1500 qdisc mq state
UP group default qlen 32
    inet 10.137.2.1/32 scope global vif112.0
       valid_lft forever preferred_lft forever
